# Puppeteer

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  QUICKSTART.md  README.md  SECURITY.md  clippy.toml  docker-compose.yml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml  rust.yml
.kiro/steering/: product.md  structure.md  tech.md
PersonaForge.wiki/: Architecture.md  Home.md  RAG-Memory.md  Vision.md
Puppeteerwiki/: Commands.md  Configuration.md  Contributing.md  Home.md  Installation.md  Mini-App.md  Quick-Start.md  Security.md  Voice.md  _Sidebar.md
migrations/: 20260104110510_initial_schema.sql  20260105120000_add_summaries_and_voice.sql  20260105180000_add_runtime_config.sql  20260106140000_add_persona_name_triggers.sql  20260107150000_shorter_persona_prompts.sql  20260228000002_humanization_features.sql  20260228000003_add_rag_memory.sql
src/: config.rs  lib.rs  logging.rs  main.rs  state.rs
src/ai/: mod.rs  ollama.rs  personas.rs  rag.rs  search.rs  whisper.rs
src/bot/: callbacks.rs  dialogues.rs  group_commands.rs  handlers.rs  middleware.rs  mod.rs
src/bot/handlers/: callbacks.rs  commands.rs  messages.rs  mod.rs
src/db/: mod.rs  models.rs  repository.rs
src/llm/: client.rs
src/userbot/: mod.rs  spam.rs  worker.rs
src/voice/: mod.rs
src/web/: search.rs
src/webapp/: api.rs  auth.rs  mod.rs  server.rs
src/webapp/static/: app.js  index.html  style.css
wiki/: API.md  Architecture.md  Commands.md  Home.md  Personas.md  Quick-Start.md  RAG-Memory.md  Web-Search.md  _Footer.md
