[package]
name = "persona_forge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "persona_forge_bot"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22"
bincode = "1.3.3"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3.31"
log = "0.4.29"
pretty_env_logger = "0.5.0"
rand = "0.8"
reqwest = { version = "0.13.1", features = ["json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }
urlencoding = "2.1"
