[package]
name = "puppeteer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Admin Bot (Bot API)
teloxide = { version = "0.13", features = ["macros", "sqlite-storage-nativetls"] }

# Userbots (MTProto via TDLib)
rust-tdlib = { version = "0.4", features = ["client"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "migrate", "chrono"] }

# HTTP client for Ollama
reqwest = { version = "0.13", features = ["json", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
bincode = "1.3"
base64 = "0.21"
lazy_static = "1.4"
urlencoding = "2.1"
scraper = "0.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
